--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@
 .name{
     background-color:rgb(150, 165, 160);
 }
+.resume-image{
+    border-radius: 60%;
+    height: 300px;
+    width: 300px;
+}
 body{
     background-color:peachpuff;
 }
@@ -48,7 +53,7 @@ nav ul li a:hover{
 .content{
     position: initial;
 }   
-h2{
+h1{
     color:navy:
     margin:20px 0px 20px;
     font-size:70;
