--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ nav{
 }
 
 span{
-    color: black;
+    color: darkolivegreen;
     align-items: center;
 }
 nav ul li{
@@ -76,3 +76,4 @@ h4{
     font-size: 30px;
     text-align: center;
 }
+
