--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 *{
-   padding:0%; 
-   margin 0%;
+   padding:1%; 
+   margin 1%;
    box-sizing: border-box;  
 }
 .mean-score{
@@ -20,6 +20,8 @@
 }
 body{
     background-color:peachpuff;
+    padding-top: 0%;
+    page-break-inside: avoid;
 }
 nav{
     display:flex:block;
@@ -75,5 +77,8 @@ h4{
     display: inline;
     font-size: 30px;
     text-align: center;
+}
+.course{
+    display: block;
 }
 
